--- a/package.json
+++ b/package.json
@@ -37,5 +37,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "nodemon":"3.1.7",
+    "dotenv": "16.4.5"
   }
 }
